# wazuh-serdes

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: ci.yml  clang-tidy.yml  coverage.yml  format.yml
cmake/: version.hpp.in
docs/html/: annotated.html  classDeserializeCmd-members.html  classDeserializeCmd.html  classDeserializeCmd__coll__graph.map  classDeserializeCmd__coll__graph.md5  classDeserializeCmd__inherit__graph.map  classDeserializeCmd__inherit__graph.md5  classDeserializeCmd_a980007e55c41d3d2514c6afbf9a6e438_cgraph.map  classDeserializeCmd_a980007e55c41d3d2514c6afbf9a6e438_cgraph.md5  classICommand-members.html  classICommand.html  classICommand__inherit__graph.map  classICommand__inherit__graph.md5  classSerDesApp-members.html  classSerDesApp.html  classSerDesApp_aa02fe32d841dd99840c0d32fd772b098_icgraph.map  classSerDesApp_aa02fe32d841dd99840c0d32fd772b098_icgraph.md5  classSerializeCmd-members.html  classSerializeCmd.html  classSerializeCmd__coll__graph.map  classSerializeCmd__coll__graph.md5  classSerializeCmd__inherit__graph.map  classSerializeCmd__inherit__graph.md5  classSerializeCmd_a90520b43b3d8845c453d6fb8dd61c2b2_cgraph.map  classSerializeCmd_a90520b43b3d8845c453d6fb8dd61c2b2_cgraph.md5  classes.html  cli_8cpp.html  cli_8cpp__incl.map  cli_8cpp__incl.md5  cli_8hpp.html  cli_8hpp__dep__incl.map  cli_8hpp__dep__incl.md5  cli_8hpp__incl.map  cli_8hpp__incl.md5  cli_8hpp_source.html  command_8hpp.html  command_8hpp__dep__incl.map  command_8hpp__dep__incl.md5  command_8hpp__incl.map  command_8hpp__incl.md5  (+135 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  namespaces_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
include/command/: command.hpp  deserialize_cmd.hpp  icommand.hpp  serialize_cmd.hpp
include/options/: options.hpp
include/options/cli/: cli.hpp
include/serdes/: serdes.hpp  serdes_app.hpp
src/: main.cpp
src/command/: deserialize_cmd.cpp  serialize_cmd.cpp
src/options/cli/: cli.cpp
src/serdes/: serdes.cpp  serdes_app.cpp
test/: serdes_test.cpp
tests/: CMakeLists.txt
tests/cli/: cli_parse_tests.cpp
tests/commands/: deserialize_cmd_tests.cpp  serialize_cmd_tests.cpp
tests/serdes/: deserialize_tests.cpp  integration_tests.cpp  serialize_tests.cpp  validate_params_tests.cpp
